--- a/src/main/webapp/help/help-filterBranchesByRegex_zh_CN.html
+++ b/src/main/webapp/help/help-filterBranchesByRegex_zh_CN.html
@@ -1,8 +1,10 @@
 <div>
   <div>
-    <p>允许触发构建的目标分支的正则表达式匹配，如果为空，则所有的分支都可以触发构建。</p>
+    <p>允许触发构建的目标分支（或标签）的正则表达式匹配，如果为空，则所有的分支（或标签）都可以触发构建。</p>
+    <p>* 只提供了针对分支的正则表达式时会导致标签推送被过滤，为了确保标签推送被执行，需要在正则中包含以 <code>^refs\/tags\/</code> 开头的正则表达式, 具体请见下面的示例. </p>
     <p>比如:</p>
     <pre># 允许包含 debug 或 release 的分支名触发构建: (.*debug.*|.*release.*) </pre>
     <pre># 过滤所有包含  `Release` 或者 `release` 的分支名触发构建: ^(?:(?![R|r]elease).)*$ </pre>
+    <pre># 允许所有标签和 master 分支触发构建：(^refs\/tags\/.+)|master </pre>
   </div>
 </div>
