Fixed delimiter, added = sign, better help message

--- a/src/main/resources/com/gitee/jenkins/publisher/GiteeReleasePublisher/help-increment.html
+++ b/src/main/resources/com/gitee/jenkins/publisher/GiteeReleasePublisher/help-increment.html
@@ -4,11 +4,12 @@
     </p>
 
     <p>
-        Use <b>[0 | +]</b> chars to set incrementing. <i>0</i> will that version number the same. <i>+</i> will increment that version number. 
+        Use <b>[0 | + | =]</b> chars to set incrementing. <b>0</b> will that version number the same. <b>+</b> will increment that version number.
+        <b>=</b> will set the number equal to what is was before.  
     </p>
 
     <p>
-        <i>Example:</i> If a latest tag is 1.1.1, and the increment string is set to 0.0.+, then the new incremented tag will be 1.1.2.
+        <i>Example:</i> If a latest tag is 1.1.1, and the increment string is set to =.0.+, then the new incremented tag will be 1.0.2
     </p>
 
     <p>
